# py_bt_ros_nav2_webots

./: .gitignore  README.md
py_bt_ros/: .gitignore  config.yaml  config_nav2.yaml  main.py
py_bt_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
py_bt_ros/log/: latest_build
py_bt_ros/scenarios/nav2_webots/: bt_nodes.py  default_bt.xml
webots_ros2_ws/install/: local_setup.sh  setup.sh
webots_ros2_ws/install/bt_image_capture/lib/bt_image_capture/: bt_take_picture
webots_ros2_ws/install/bt_image_capture/share/bt_image_capture/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
webots_ros2_ws/install/webots_ros2/share/webots_ros2/: package.sh
webots_ros2_ws/install/webots_ros2_control/share/webots_ros2_control/: local_setup.sh  package.sh
webots_ros2_ws/install/webots_ros2_control/share/webots_ros2_control/cmake/: webots_ros2_controlConfig.cmake
webots_ros2_ws/install/webots_ros2_driver/share/webots_ros2_driver/: package.sh
webots_ros2_ws/install/webots_ros2_driver/share/webots_ros2_driver/scripts/: webots-controller
webots_ros2_ws/install/webots_ros2_msgs/share/webots_ros2_msgs/: package.sh
webots_ros2_ws/install/webots_ros2_tests/share/webots_ros2_tests/: package.sh
webots_ros2_ws/install/webots_ros2_turtlebot/share/webots_ros2_turtlebot/: package.sh
webots_ros2_ws/log/: latest_build
webots_ros2_ws/src/bt_image_capture/: package.xml  setup.cfg  setup.py
webots_ros2_ws/src/bt_image_capture/bt_image_capture/: take_picture_node.py
(+3 files in other folders)
