<?xml version="1.0"?>
<package format="3">
  <name>bt_image_capture</name>
  <version>0.0.0</version>
  <description>BT image capture service node</description>

  <maintainer email="jinwoo@example.com">jinwoo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>

  <!-- OpenCV (필요하면) -->
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
